--- a/src/GalapagoshaTestScr.mxml
+++ b/src/GalapagoshaTestScr.mxml
@@ -167,7 +167,7 @@
 			 smooth="true" source="@Embed('../assets/background.png')" 
 			 horizontalCenter="0" verticalCenter="0"/>
 	<ns1:Clouds2 includeIn="greeting,beckon" width="1100" horizontalCenter="0" verticalCenter="0"/>
-	<s:Group includeIn="greeting,beckon" left="0" right="0" top="0" bottom="0">
+	<s:Group includeIn="greeting,beckon,menu" left="0" right="0" top="0" bottom="0">
 		
 		
 		<s:VideoDisplay id="beckonVideo" width="1080" horizontalCenter="0"
@@ -192,7 +192,7 @@
 					</s:Rect>
 				</s:Graphic>
 			</s:Group>
-			<s:Group id="circleRecipe" width="146" height="146" horizontalCenter="-205" verticalCenter="100">
+			<s:Group id="circleRecipe" width="73" height="73" horizontalCenter="-130" verticalCenter="700">
 				<s:Ellipse x="0" width="100%" height="100%">
 					<s:fill>
 						<s:SolidColor color="0"/>
@@ -210,7 +210,7 @@
 					</s:Rect>
 				</s:Graphic>
 			</s:Group>
-			<s:Group id="circleWeight" width="146" height="146" horizontalCenter="205" verticalCenter="100">
+			<s:Group id="circleWeight" width="73" height="73" horizontalCenter="130" verticalCenter="700">
 				<s:Ellipse x="0" width="100%" height="100%">
 					<s:fill>
 						<s:SolidColor color="0"/>
@@ -228,7 +228,7 @@
 					</s:Rect>
 				</s:Graphic>
 			</s:Group>
-			<s:Group id="circleEquador" width="146" height="146" horizontalCenter="0" verticalCenter="-100">
+			<s:Group id="circleEquador" width="73" height="73" horizontalCenter="0" verticalCenter="600">
 				<s:Ellipse x="0" width="100%" height="100%">
 					<s:fill>
 						<s:SolidColor color="0"/>
@@ -247,7 +247,7 @@
 					</s:Rect>
 				</s:Graphic>
 			</s:Group>
-			<s:Group id="circleNinja" width="146" height="146" horizontalCenter="0" verticalCenter="300">
+			<s:Group id="circleNinja" width="73" height="73" horizontalCenter="0" verticalCenter="800">
 				<s:Ellipse x="0" width="100%" height="100%">
 					<s:fill>
 						<s:SolidColor color="0"/>
