--- a/src/Recipe.mxml
+++ b/src/Recipe.mxml
@@ -4,7 +4,7 @@
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:ns1="*"
 		 width="1080" height="1920" currentState="recipe_start"
-		 textAlign.recipe_print="center" stateChangeComplete="group1_stateChangeCompleteHandler(event)">
+		 textAlign.recipe_print="center" stateChangeComplete="group1_stateChangeCompleteHandler(event)" addedToStage="group1_addedToStageHandler(event)">
 	<fx:Style source="styles.css"/>
 	<fx:Script>
 		<![CDATA[
@@ -46,7 +46,12 @@
 			
 			protected function recipeChooser_stateChangeCompleteHandler(event:FlexEvent):void
 			{
-				this.currentState = event.target.currentState;
+				currentState = event.target.currentState;
+			}
+			
+			protected function group1_addedToStageHandler(event:Event):void
+			{
+				currentState = "recipe_start";
 			}
 			
 		]]>
@@ -69,28 +74,55 @@
 	<s:Image x="0" y="0" source="@Embed('../assets/Recipe/bg.jpg')"
 			 x.recipe_start="0" y.recipe_start="0"/>
 	<s:Group left="0" top="0"  width="1080" bottom="0" includeIn="recipe_start">	
-		<s:TextArea selectable="false" mouseEnabled="false" borderVisible="false" contentBackgroundAlpha="0.0" editable="false" includeIn="recipe_start" x="695" y="1507" styleName="recipeDescr"
-				 text="Жареные&#xd;бананы"/>
-		<s:TextArea selectable="false" mouseEnabled="false" borderVisible="false" contentBackgroundAlpha="0.0" editable="false" includeIn="recipe_start" x="695" y="843" styleName="recipeDescr"
-				 text="Банановый&#xd;шейк"/>
-		<s:TextArea selectable="false" mouseEnabled="false" borderVisible="false" contentBackgroundAlpha="0.0" editable="false" includeIn="recipe_start" x="695" y="1268" styleName="recipeDescr"
-				 text="Банановое&#xd;мороженое"/>
-		<s:TextArea selectable="false" mouseEnabled="false" borderVisible="false" contentBackgroundAlpha="0.0" editable="false" includeIn="recipe_start" x="695" y="1049" styleName="recipeDescr"
-				 text="Банановые&#xd;блинчики"/>
 		<s:TextArea includeIn="recipe_start" y="451" height="319" borderVisible="false"
 					color="#FFFFFF" contentBackgroundAlpha="0.0" editable="false"
 					horizontalCenter="0" mouseEnabled="false" selectable="false"
 					styleName="metrHeader" text="Бананы&#xd;каждый день"/>
-		<s:TextArea includeIn="recipe_start" x="171" y="843" width="246" height="146"
-					borderVisible="false" contentBackgroundAlpha="0.0" editable="false"
-					mouseEnabled="false" selectable="false" styleName="recipeName" text="Для&#xd;тонуса"/>
-		<s:TextArea selectable="false" mouseEnabled="false" borderVisible="false" contentBackgroundAlpha="0.0" editable="false" includeIn="recipe_start" x="113" y="1049"  width="304" height="146" styleName="recipeName" text="Для&#xd;завтрака"/>
-		<s:TextArea selectable="false" mouseEnabled="false" borderVisible="false" contentBackgroundAlpha="0.0" editable="false" includeIn="recipe_start" x="95" y="1268"  width="324" height="146" styleName="recipeName" text="Для&#xd;вечеринки"/>
-		<s:TextArea selectable="false" mouseEnabled="false" borderVisible="false" contentBackgroundAlpha="0.0" editable="false" includeIn="recipe_start" x="65" y="1499"  width="354" height="146" styleName="recipeName" text="Всем&#xd;на радость"/>	
-		<ns1:RecipeIconShake includeIn="recipe_start" x="485.55" y="806" click="recipeiconshake1_clickHandler(event)"/>
-		<ns1:RecipeIconBlin includeIn="recipe_start" x="479" y="1053" click="recipeiconblin1_clickHandler(event)"/>
-		<ns1:RecipeIconCream includeIn="recipe_start" x="508.95" y="1222" height="191.55" click="recipeiconcream1_clickHandler(event)"/>
-		<ns1:RecipeIconZhar includeIn="recipe_start" x="479.3" y="1499" click="recipeiconzhar1_clickHandler(event)"/>
+		<s:Group y="780" left="0" right="0" height="200" click="recipeiconshake1_clickHandler(event)">
+			<s:TextArea includeIn="recipe_start" x="703" y="63" width="341" height="165"
+						borderVisible="false" contentBackgroundAlpha="0.0" editable="false"
+						mouseEnabled="false" selectable="false" styleName="recipeDescr"
+						text="Банановый&#xd;шейк"/>
+			<s:TextArea includeIn="recipe_start" x="179" y="63" width="246" height="146"
+						borderVisible="false" contentBackgroundAlpha="0.0" editable="false"
+						mouseEnabled="false" selectable="false" styleName="recipeName" text="Для&#xd;тонуса"/>
+			<ns1:RecipeIconShake includeIn="recipe_start" x="493.55" y="26"
+								 />
+		</s:Group>
+		<s:Group y="1016" left="0" right="0" height="210" click="recipeiconblin1_clickHandler(event)">
+			<s:TextArea includeIn="recipe_start" x="701" y="41" width="325" height="146"
+						borderVisible="false" contentBackgroundAlpha="0.0" editable="false"
+						mouseEnabled="false" selectable="false" styleName="recipeDescr"
+						text="Банановые&#xd;блинчики"/>
+			<s:TextArea includeIn="recipe_start" x="119" y="41" width="304" height="146"
+						borderVisible="false" contentBackgroundAlpha="0.0" editable="false"
+						mouseEnabled="false" selectable="false" styleName="recipeName"
+						text="Для&#xd;завтрака"/>
+			<ns1:RecipeIconBlin includeIn="recipe_start" x="485" y="45"
+								/>
+		</s:Group>
+		<s:Group y="1238" left="0" right="0" height="200" click="recipeiconcream1_clickHandler(event)">
+			<s:TextArea x="699" y="30" width="325" height="150" borderVisible="false"
+						contentBackgroundAlpha="0.0" editable="false" mouseEnabled="false"
+						selectable="false" styleName="recipeDescr" text="Банановое&#xd;мороженое"/>
+			<s:TextArea x="99" y="30" width="324" height="146" borderVisible="false"
+						contentBackgroundAlpha="0.0" editable="false" mouseEnabled="false"
+						selectable="false" styleName="recipeName" text="Для&#xd;вечеринки"/>
+			<ns1:RecipeIconCream x="512.95" y="-16" height="191.55"
+								 />
+		</s:Group>
+		<s:Group y="1472" left="0" right="0" height="206" click="recipeiconzhar1_clickHandler(event)">
+			<s:TextArea includeIn="recipe_start" x="693" y="35" width="325" height="148"
+						borderVisible="false" contentBackgroundAlpha="0.0" editable="false"
+						mouseEnabled="false" selectable="false" styleName="recipeDescr"
+						text="Жареные&#xd;бананы"/>
+			<s:TextArea includeIn="recipe_start" x="63" y="27" width="354" height="146"
+						borderVisible="false" contentBackgroundAlpha="0.0" editable="false"
+						mouseEnabled="false" selectable="false" styleName="recipeName"
+						text="Всем&#xd;на радость"/>
+			<ns1:RecipeIconZhar includeIn="recipe_start" x="477.3" y="27"
+								/>
+		</s:Group>
 	</s:Group>
 	
 	
@@ -118,5 +150,7 @@
 	<s:Image top="80" width="554" height="414" horizontalCenter="0"
 			 source="@Embed('../assets/olushaUpper.png')"/>
 	<ns1:RecipeChooser id="recipeChooser" excludeFrom="recipe_start" y="1408" left="0" right="0" height="300" stateChangeComplete="recipeChooser_stateChangeCompleteHandler(event)"/>
+	<ns1:ShakeRecipe includeIn="recipe_shake" y="792" width="1069.9" height="623.9"
+					 horizontalCenter="0"/>
 	
 </s:Group>
