--- a/src/TestTwo.mxml
+++ b/src/TestTwo.mxml
@@ -5,7 +5,7 @@
 					   xmlns:ns1="*"
 					   width="1080" height="900"
 					   addedToStage="windowedapplication1_addedToStageHandler(event)"
-					   currentState="Recipe" showStatusBar="false">
+					   currentState="Ecuador" showStatusBar="false">
 	
 	<fx:Script>
 		<![CDATA[
