--- a/src/BananaNinja.mxml
+++ b/src/BananaNinja.mxml
@@ -189,7 +189,9 @@
 				{
 					currentBanans--;
 				}
-				bananaHolder.removeChild(bananaHolder.getChildAt(i));
+				var bann:ObjectContainer3D = bananaHolder.getChildAt(i);
+				bananaHolder.removeChild(bann);
+				bann.dispose();
 				blist.splice(i,1);
 				
 				rotlist.splice(i,1);
