--- a/src/GalapagoshaTestScr.mxml
+++ b/src/GalapagoshaTestScr.mxml
@@ -97,14 +97,34 @@
 				tracker.addEventListener(Tracker.USER_LEAVE,onUserLeave);
 				tracker.addEventListener(Tracker.USER_STOP,onUserStop);
 				
-				
+				beckonVideo.videoObject = new Video(1920,1080);
 				var nc:NetConnection = new NetConnection(); 
 				nc.connect(null); 
 				ns = new NetStream(nc); 
 				ns.client = {onMetaData:ns_onMetaData, NetStatusEvent:ns_onPlayStatus}; 
-				ns.addEventListener(NetStatusEvent.NET_STATUS, ns_onPlayStatus); 
+				ns.addEventListener(NetStatusEvent.NET_STATUS, ns_onPlayStatus);
+				trace(beckonVideo,beckonVideo.videoObject,ns);
 				beckonVideo.videoObject.attachNetStream(ns);
+				
 				ns.play("../assets/1.flv");
+				stage.addEventListener(MouseEvent.CLICK,detectMotion);
+				stage.addEventListener(MouseEvent.MOUSE_MOVE,detectMotion);
+			}
+			private var lastTimeActive:Date; 
+			private function detectMotion(e:MouseEvent):void
+			{
+				if(lastTimeActive == null)
+				{
+					lastTimeActive = new Date();
+					return;
+				}
+				var currentTime:Date = new Date();
+				var delta:Number = currentTime.time - lastTimeActive.time;
+				if(delta > 30000) 
+				{
+					if(currentState != "beckon" || currentState != "greeting")
+						onUserLeave(null);
+				}
 			}
 			private var lastVid:int = -1;
 			private var nextVid:int = -1;
@@ -141,26 +161,6 @@
 				
 				
 			} 
-			protected function onVideoStateChange(event:MediaPlayerStateChangeEvent):void
-			{
-				trace(event.state);
-				switch(event.state)
-				{
-					case "ready":
-						setTimeout(playNext,1);
-						break;
-				}
-			}
-			private function playNext():void
-			{
-				if(!beckonVideo.playing)
-				{
-					var path:String = "../assets/"+(int(Math.random()*8)).toString()+".flv";
-					trace(path);
-					beckonVideo.source = path;
-					beckonVideo.play();
-				}
-			}
 			public function startUserInteraction():void
 			{
 				if(currentState == "beckon")
@@ -393,9 +393,7 @@
 		<s:Scroller includeIn="greeting,beckon,menu" width="1080"
 					height="1920">
 			<s:Group left="0" right="0" top="0" bottom="0">
-				<s:VideoDisplay id="beckonVideo" horizontalCenter="0" rotation="90"
-								scaleMode="letterbox" verticalCenter="0"
-								source="assets/1.flv"
+				<ns1:VideoPlace id="beckonVideo" horizontalCenter="0" rotation="90" verticalCenter="0"
 								height.greeting="1080" 
 								height.menu="1080" horizontalCenter.menu="0" verticalCenter.menu="-200"/>
 				<s:Image width="600" horizontalCenter="0" smooth="true"
